se cambio el el index del home y se quito del menu la opcion usuarios

--- a/SGPB.Web/Views/Home/Index.cshtml
+++ b/SGPB.Web/Views/Home/Index.cshtml
@@ -29,7 +29,8 @@
                         <div class="text-center">
                             <h5 class="fw-bolder">@item.Name</h5>
                             <div class="d-flex justify-content-center small text-warning mb-2">
-                            </div><span class="text-muted text-decoration-line-through">@item.Description</span>
+                                    <p>@item.Serial</p>
+                            </div><span class="text-muted text-decoration-line-through">Numero de páginas: @item.NumPages</span>
                         </div>
                     </div>
                     <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
