--- a/SGPB.Web/Views/Account/Register.cshtml
+++ b/SGPB.Web/Views/Account/Register.cshtml
@@ -18,6 +18,11 @@
     <div class="container px-5 my-5 px-5" style="max-width: 80%;">
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-6">
+                <div class="text-success">
+                    <p>
+                        @ViewBag.Message
+                    </p>
+                </div>
                 <form asp-action="Register" enctype="multipart/form-data">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <partial name="_User" />
