--- a/SGPB.Web/Views/Account/Login.cshtml
+++ b/SGPB.Web/Views/Account/Login.cshtml
@@ -37,6 +37,7 @@
                                 <div class="d-grid">
                                       <input type="submit" value="Iniciar Sesión" class="btn btn-outline-primary btn-block mb-2"/>
                                         <a asp-action="Register" class="btn btn-outline-secondary btn-block">Registrar Nuevo Usuario</a>
+                                        <a asp-action="RecoverPassword" class="btn btn-link d-flex justify-content-center mt-2">¿Olvidaste tu contraseña?</a>
                                 </div>
                             </form>
                         </div>
