--- a/SGPB.Web/Views/Shared/_Layout.cshtml
+++ b/SGPB.Web/Views/Shared/_Layout.cshtml
@@ -28,9 +28,7 @@
                         </li>
                         @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Prestamos de libros</a>
-                            </li>
+                            
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Libros</a>
                             </li>
@@ -45,6 +43,9 @@
                                 </div>
                             </li>
                         }
+                        <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Lendings" asp-action="Index">Prestamos de libros</a>
+                            </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacidad</a>
                         </li>
